<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_files">Add files</string>
    <string name="add_waiting_task">Has been added to execution task queue</string>
    <string name="alert_delete_multiple">Selected files will be deleted.</string>
    <string name="already_exists">%1$s is already in use.</string>
    <string name="app_name">File manager</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="category_archives">Archives</string>
    <string name="category_audio">Audio</string>
    <string name="category_bluetooth">Bluetooth</string>
    <string name="category_download">Downloads</string>
    <string name="category_music">Music</string>
    <string name="category_pictures">Pictures</string>
    <string name="category_safe">Lock</string>
    <string name="category_vedios">Videos</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choice_file">Selected</string>
    <string name="choose_files">Select file(s)</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear all</string>
    <string name="compress">Compress</string>
    <string name="compress_file_name_too_long">The compress file name is too long</string>
    <string name="compress_susscces">File compressed</string>
    <string name="compressing">Compressing</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_rename">Confirm name</string>
    <string name="copy">Copy</string>
    <string name="copy_deny">No permission to copy.</string>
    <string name="create_folder">Create</string>
    <string name="create_folder_ok">Save</string>
    <string name="create_folder_title">Create folder</string>
    <string name="create_hidden_file">"File will be hidden if its name starts with '.'."</string>
    <string name="create_new_folder">New folder</string>
    <string name="cut">Cut</string>
    <string name="cut_deny">No permission to cut.</string>
    <string name="day_ago">day ago</string>
    <string name="default_folder_name">Folder name</string>
    <string name="default_search_text">Search files</string>
    <string name="delete">Delete</string>
    <string name="delete_deny">No permission to delete.</string>
    <string name="delete_fail">"Couldn't delete"</string>
    <string name="deleted">File deleted</string>
    <string name="deselect_all">Deselect all</string>
    <string name="detail">Details</string>
    <string name="detail_name_m">Name</string>
    <string name="detail_path_m">Location</string>
    <string name="detail_size_m">Size</string>
    <string name="detail_time_m">Modified</string>
    <string name="dialog_close_btn">Close</string>
    <string name="done">Done</string>
    <string name="draw_left_phone_storage_m">Phone</string>
    <string name="draw_left_phone_storage_n">Phone</string>
    <string name="drm_begin">Begin:</string>
    <string name="drm_can_forward">Can be forwarded.</string>
    <string name="drm_can_not_forward">"Can't be forwarded"</string>
    <string name="drm_current_count">Current count:</string>
    <string name="drm_current_right">Current constraint:</string>
    <string name="drm_end">End:</string>
    <string name="drm_forwardforbidden_message">"The DRM file can't be forwarded."</string>
    <string name="drm_forwardforbidden_title">Not Forward</string>
    <string name="drm_interval">Valid for %s after first time use</string>
    <string name="drm_no_license">No available DRM licence.</string>
    <string name="drm_no_limitation">No limitation</string>
    <string name="drm_no_valid_right">File has no valid DRM authority.</string>
    <string name="drm_protection_status">Protection status:</string>
    <string name="drm_toast_license_expired">DRM licence has expired.</string>
    <string name="drm_use_left">Remains:</string>
    <string name="drm_wifidisplay_cancel_btn">Turn off cast screen</string>
    <string name="drm_wifidisplay_message">"Copy-protected file can't be distributed."</string>
    <string name="drm_wifidisplay_title">Copy-protected files</string>
    <string name="empty_name">Enter a name</string>
    <string name="exceeded_max_task">Has exceeded the current maximum number of tasks</string>
    <string name="executable_m">Application</string>
    <string name="exit_dialog_content">Current operation is ongoing, sure to exit?</string>
    <string name="extract">Extract</string>
    <string name="extract_susscces">File extracted</string>
    <string name="extracting">Extracting</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="file_already_exists">%1$s already exists</string>
    <string name="file_name_too_long">The input name is too long.</string>
    <string name="folder_already_exists">Folder already exists</string>
    <string name="folder_items">%1$s items</string>
    <string name="freeof_m">Free</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hide_btn">Hide</string>
    <string name="hide_file">Hide hidden files</string>
    <string name="home_path">HOME</string>
    <string name="hour_ago">hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="input">abc</string>
    <string name="input_method">Input method</string>
    <string name="insufficient_memory">Insufficient space</string>
    <string name="invalid_char_prompt">You have typed an invalid character.</string>
    <string name="invalid_empty_name">"File or folder name can't be empty."</string>
    <string name="invalid_name">Invalid name</string>
    <string name="items">items</string>
    <string name="just_now">just now</string>
    <string name="keep_both">Keep both</string>
    <string name="left_null">" "</string>
    <string name="loading">Loading contents</string>
    <string name="main_document">Documents</string>
    <string name="main_installers">Installers</string>
    <string name="main_recents">Recents</string>
    <string name="menu_deselect">Deselect</string>
    <string name="menu_select">Select</string>
    <string name="menu_select_files">Select files</string>
    <string name="minute_ago">minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="modified_time">Modified</string>
    <string name="move_safe">Lock</string>
    <string name="msg_rename_ext">File extension will be changed. File might not be recognised. Continue?</string>
    <string name="msg_unable_open_file">The file format is not supported.</string>
    <string name="msg_unable_open_file_in_app">No app to open file</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="multi_alert_delete_message_files">Delete selected files?</string>
    <string name="multi_alert_delete_message_folders">Delete selected folders?</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_available_storage_dialog_content">SD card has been removed or built-in.</string>
    <string name="no_category">This category is empty</string>
    <string name="no_folder">No files</string>
    <string name="no_search_result">0 file(s) found for \"%1$s\"</string>
    <string name="no_search_result_m">No results found for \"%1$s\"</string>
    <string name="no_search_result_m_new">No results</string>
    <string name="not_available">Not available</string>
    <string name="ok">OK</string>
    <string name="open_apk">Installation apk is not supported</string>
    <string name="operation_fail">"Couldn't operate some files"</string>
    <string name="options">Options</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="paste">File pasted</string>
    <string name="paste_dialog">Paste</string>
    <string name="paste_same_folder">"Couldn't copy: source and destination folder are the same."</string>
    <string name="permission_exit_btn">Exit</string>
    <string name="permission_setting_content">"Change permissions in your device's app settings. Give File Manager access to storage."</string>
    <string name="permission_setting_title">Grant access</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_welcome_title">Permission needed</string>
    <string name="rename">Rename</string>
    <string name="select_all">Select all</string>
    <string name="set_public">Unlock</string>
    <string name="share">Share</string>
    <string name="shortcut_item">Add shortcut</string>
    <string name="show_file">Show hidden files</string>
    <string name="view_grid">View as grid</string>
    <string name="view_list">View as list</string>
</resources>