<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/more_menu_linear_top" android:paddingBottom="@dimen/more_menu_linear_top" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/cut_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cut" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/copy_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/copy" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/paste_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paste" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/delete_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/details_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/detail" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/rename_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rename" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/extract_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/extract" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/shortcut_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/shortcut_item" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/share_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/compress_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/compress" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/selectall_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_all" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/clearall_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/clear_all" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/canceledit_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/unselectall_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/deselect_all" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/select_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_select" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/input_method" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/input_method" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/list_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/view_list" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/grid_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/view_grid" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/createfolder_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/create_new_folder" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/show_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show_file" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/hide_item" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hide_file" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/move_to_safe_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/move_safe" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
        <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/remove_to_safe_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_public" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
    </LinearLayout>
</ScrollView>