<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/add_file_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_files" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
    <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/remove_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/set_public" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
    <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/select_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_select" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
    <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/selectall_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_all" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
    <TextView android:textSize="@dimen/sort_menu_title_textSize" android:textColor="#de000000" android:layout_gravity="center_vertical" android:id="@id/unselectall_item_normal" android:background="@drawable/ripple_bg" android:paddingTop="@dimen/more_menu_item_padding" android:paddingBottom="@dimen/more_menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/deselect_all" android:fontFamily="sans-serif" android:paddingStart="@dimen/more_menu_padding_left" android:paddingEnd="@dimen/more_menu_padding_left" />
</LinearLayout>