<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:theme="@style/CustomEditTextTheme" android:textColor="#ff757575" android:id="@id/extract_edit_text" android:visibility="gone" android:layout_width="245.0dip" android:layout_height="48.0dip" android:layout_marginTop="25.0dip" android:hint="@string/default_folder_name" android:singleLine="true" android:maxLength="254" android:inputType="textCapSentences|textNoSuggestions" android:layout_marginStart="17.0dip" android:layout_marginEnd="10.0dip" />
    <EditText android:theme="@style/CustomEditTextTheme" android:textColor="#ff757575" android:id="@id/compress_edit_text" android:visibility="gone" android:layout_width="245.0dip" android:layout_height="48.0dip" android:layout_marginTop="25.0dip" android:hint="@string/category_archives" android:singleLine="true" android:maxLength="250" android:inputType="textCapSentences|textNoSuggestions" android:layout_marginStart="17.0dip" android:layout_marginEnd="10.0dip" />
    <TextView android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/delete_dialog_message" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/dialog_ok" android:layout_gravity="right" android:id="@id/extract_dialog_keep" android:background="@drawable/ripple_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/keep_both" android:textAllCaps="true" android:layout_marginEnd="25.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/dialog_ok" android:layout_gravity="right" android:id="@id/extract_dialog_rename" android:background="@drawable/ripple_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/rename" android:textAllCaps="true" android:layout_marginEnd="25.0dip" />
</LinearLayout>