<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/filemanager_theme_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_above="@id/permission_option_btn_container" android:layout_alignParentTop="true">
        <RelativeLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/text_indicator" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/permission_welcome_title_size" android:textColor="#ffffffff" android:gravity="center" android:id="@id/permission_welcome_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/permission_welcome_title_top" android:text="@string/permission_welcome_title" android:fontFamily="sans-serif-medium" />
                <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:id="@id/permission_deny_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/permission_deny_title_left" android:layout_marginTop="@dimen/permission_deny_title_top" android:layout_marginBottom="@dimen/permission_deny_title_bottom" android:text="@string/permission_setting_title" android:fontFamily="sans-serif" />
                <TextView android:textSize="@dimen/permission_deny_content_size" android:textColor="#ffffffff" android:id="@id/permission_deny_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/permission_deny_title_left" android:layout_marginRight="@dimen/permission_deny_title_left" android:layout_marginBottom="@dimen/permission_deny_content_bottom" android:text="@string/permission_setting_content" android:lineSpacingMultiplier="1.2" android:fontFamily="sans-serif" />
            </LinearLayout>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/text_indicator">
                <ImageView android:layout_gravity="center" android:id="@id/permission_deny_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/permission_deny" android:layout_centerInParent="true" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:id="@id/permission_option_btn_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_alignParentBottom="true">
        <TextView android:id="@id/permission_deny_line" android:background="#66ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/permission_setting" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/permission_setting_size" android:textColor="#ffffffff" android:gravity="center" android:id="@id/permission_setting_exit" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/permission_setting_bottom" android:paddingBottom="@dimen/permission_setting_bottom" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/permission_exit_btn" android:layout_weight="1.0" android:textAllCaps="true" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/permission_setting_layout" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/permission_setting_size" android:textColor="#ffffffff" android:id="@id/permission_setting_btn" android:paddingTop="@dimen/permission_setting_bottom" android:paddingBottom="@dimen/permission_setting_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_settings" android:textAllCaps="true" />
                <ImageView android:layout_gravity="center_vertical" android:id="@id/permission_setting_nav" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/ic_arrow_small" android:layout_marginStart="@dimen/permission_setting_nav_left" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>